add coc_settings to Makefile and nvim_config, add install node and npm in Makefile(temp solution)

--- a/nvim_config.yml
+++ b/nvim_config.yml
@@ -12,3 +12,7 @@
               dest: $HOME/.config/nvim/init.vim
               state: link
 
+          - file:
+              src: $HOME/dotfiles/files/coc-settings.json
+              dest: $HOME/.config/nvim/coc-settings.json
+              state: link
