--- a/zsh_install.yml
+++ b/zsh_install.yml
@@ -1,16 +1,18 @@
 ---
 
 - hosts: localhost
-  become: yes
 
   tasks:
     - name: install zsh
+      become: yes
       pacman:
         name:
           - zsh
         state: present
         update_cache: yes
-    - name: install oh-my-zsh
-      shell:
-        cmd: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-        chdir: $HOME
+
+    - name: change shell environment
+      become: yes
+      user:
+        name: "{{ ansible_user_id }}"
+        shell: /bin/zsh
